# rt-embed

./: README.md  pyproject.toml  requirements.txt
examples/: csv_input.py  flask_input.py  hn_embed.py  image_embed.py  kafka_temporal.py  push_api.py  sqlalchemy.py  video_transcribe.py
examples/data/: books.csv
src/embed/: __init__.py
src/embed/embedding/: __init__.py  huggingface.py
src/embed/objects/: __init__.py  base.py  webpage.py
src/embed/processing/: __init__.py  batch.py  html.py  text.py
src/embed/sources/: __init__.py  file.py  streaming.py  url.py  websocket.py
src/embed/stores/: __init.py  qdrant.py
src/rt-embed/embedding/: huggingface.py
src/rt-embed/objects/: __init__.py
src/rt-embed/sources/: __init__.py  websocket.py
src/rt-embed/stores/: qdrant.py
